--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "src/node_modules/ngx-toastr/toastr.css"
+              "./node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
